// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Histogram Transform Generator aggregates using the denominator equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "value": "_total>total",
    },
    "script": "params.value",
  },
}
`;

exports[`Histogram Transform Generator aggregates using the denominator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "value": "_total>total",
    },
    "script": "params.value",
  },
}
`;

exports[`Histogram Transform Generator aggregates using the numerator equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "value": "_good>total['0.0-100.0']>_count",
    },
    "script": "params.value",
  },
}
`;

exports[`Histogram Transform Generator aggregates using the numerator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "value": "_good>total['0.0-100.0']>_count",
    },
    "script": "params.value",
  },
}
`;

exports[`Histogram Transform Generator filters the source using the kql query 1`] = `
Object {
  "bool": Object {
    "minimum_should_match": 1,
    "should": Array [
      Object {
        "match": Object {
          "labels.groupId": "group-4",
        },
      },
    ],
  },
}
`;

exports[`Histogram Transform Generator returns the expected transform params for timeslices slo 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 2,
  },
  "description": "Rolled-up SLI data for SLO: irrelevant",
  "dest": Object {
    "index": ".slo-observability.sli-v2",
    "pipeline": ".slo-observability.sli.pipeline",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good": Object {
        "aggs": Object {
          "total": Object {
            "range": Object {
              "field": "latency",
              "keyed": true,
              "ranges": Array [
                Object {
                  "from": 0,
                  "to": 100,
                },
              ],
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total": Object {
        "aggs": Object {
          "total": Object {
            "value_count": Object {
              "field": "latency",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_total>total",
          },
          "script": "params.value",
        },
      },
      "slo.isGoodSlice": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "goodEvents": "slo.numerator>value",
            "totalEvents": "slo.denominator>value",
          },
          "script": "params.goodEvents / params.totalEvents >= 0.95 ? 1 : 0",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_good>total['0.0-100.0']>_count",
          },
          "script": "params.value",
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "2m",
        },
      },
      "slo.budgetingMethod": Object {
        "terms": Object {
          "field": "slo.budgetingMethod",
        },
      },
      "slo.description": Object {
        "terms": Object {
          "field": "slo.description",
        },
      },
      "slo.groupBy": Object {
        "terms": Object {
          "field": "slo.groupBy",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.indicator.type": Object {
        "terms": Object {
          "field": "slo.indicator.type",
        },
      },
      "slo.instanceId": Object {
        "terms": Object {
          "field": "slo.instanceId",
        },
      },
      "slo.name": Object {
        "terms": Object {
          "field": "slo.name",
        },
      },
      "slo.objective.sliceDurationInSeconds": Object {
        "terms": Object {
          "field": "slo.objective.sliceDurationInSeconds",
        },
      },
      "slo.objective.target": Object {
        "terms": Object {
          "field": "slo.objective.target",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
      "slo.tags": Object {
        "terms": Object {
          "field": "slo.tags",
        },
      },
      "slo.timeWindow.duration": Object {
        "terms": Object {
          "field": "slo.timeWindow.duration",
        },
      },
      "slo.timeWindow.type": Object {
        "terms": Object {
          "field": "slo.timeWindow.type",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "my-index*",
    "query": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "match": Object {
              "labels.groupId": "group-3",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.budgetingMethod": Object {
        "script": Object {
          "source": "emit('timeslices')",
        },
        "type": "keyword",
      },
      "slo.description": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.groupBy": Object {
        "script": Object {
          "source": "emit('*')",
        },
        "type": "keyword",
      },
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.indicator.type": Object {
        "script": Object {
          "source": "emit('sli.histogram.custom')",
        },
        "type": "keyword",
      },
      "slo.instanceId": Object {
        "script": Object {
          "source": "emit('*')",
        },
        "type": "keyword",
      },
      "slo.name": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.objective.sliceDurationInSeconds": Object {
        "script": Object {
          "source": "emit(120)",
        },
        "type": "long",
      },
      "slo.objective.target": Object {
        "script": Object {
          "source": "emit(0.98)",
        },
        "type": "double",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
      "slo.tags": Object {
        "script": Object {
          "source": "emit('critical,k8s')",
        },
        "type": "keyword",
      },
      "slo.timeWindow.duration": Object {
        "script": Object {
          "source": "emit('7d')",
        },
        "type": "keyword",
      },
      "slo.timeWindow.type": Object {
        "script": Object {
          "source": "emit('rolling')",
        },
        "type": "keyword",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;

exports[`Histogram Transform Generator returns the expected transform params with every specified indicator params 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 2,
  },
  "description": "Rolled-up SLI data for SLO: irrelevant",
  "dest": Object {
    "index": ".slo-observability.sli-v2",
    "pipeline": ".slo-observability.sli.pipeline",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good": Object {
        "aggs": Object {
          "total": Object {
            "range": Object {
              "field": "latency",
              "keyed": true,
              "ranges": Array [
                Object {
                  "from": 0,
                  "to": 100,
                },
              ],
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total": Object {
        "aggs": Object {
          "total": Object {
            "value_count": Object {
              "field": "latency",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_total>total",
          },
          "script": "params.value",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_good>total['0.0-100.0']>_count",
          },
          "script": "params.value",
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "1m",
        },
      },
      "slo.budgetingMethod": Object {
        "terms": Object {
          "field": "slo.budgetingMethod",
        },
      },
      "slo.description": Object {
        "terms": Object {
          "field": "slo.description",
        },
      },
      "slo.groupBy": Object {
        "terms": Object {
          "field": "slo.groupBy",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.indicator.type": Object {
        "terms": Object {
          "field": "slo.indicator.type",
        },
      },
      "slo.instanceId": Object {
        "terms": Object {
          "field": "slo.instanceId",
        },
      },
      "slo.name": Object {
        "terms": Object {
          "field": "slo.name",
        },
      },
      "slo.objective.target": Object {
        "terms": Object {
          "field": "slo.objective.target",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
      "slo.tags": Object {
        "terms": Object {
          "field": "slo.tags",
        },
      },
      "slo.timeWindow.duration": Object {
        "terms": Object {
          "field": "slo.timeWindow.duration",
        },
      },
      "slo.timeWindow.type": Object {
        "terms": Object {
          "field": "slo.timeWindow.type",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "my-index*",
    "query": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "match": Object {
              "labels.groupId": "group-3",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.budgetingMethod": Object {
        "script": Object {
          "source": "emit('occurrences')",
        },
        "type": "keyword",
      },
      "slo.description": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.groupBy": Object {
        "script": Object {
          "source": "emit('*')",
        },
        "type": "keyword",
      },
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.indicator.type": Object {
        "script": Object {
          "source": "emit('sli.histogram.custom')",
        },
        "type": "keyword",
      },
      "slo.instanceId": Object {
        "script": Object {
          "source": "emit('*')",
        },
        "type": "keyword",
      },
      "slo.name": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.objective.target": Object {
        "script": Object {
          "source": "emit(0.999)",
        },
        "type": "double",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
      "slo.tags": Object {
        "script": Object {
          "source": "emit('critical,k8s')",
        },
        "type": "keyword",
      },
      "slo.timeWindow.duration": Object {
        "script": Object {
          "source": "emit('7d')",
        },
        "type": "keyword",
      },
      "slo.timeWindow.type": Object {
        "script": Object {
          "source": "emit('rolling')",
        },
        "type": "keyword",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;
